# BCEnvironmentApp

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  Makefile  Procfile  README.md  bc_dependencies.rb  generate_deps_dockerfile.rb  package.json  setup.rb
app/controllers/: application_controller.rb  badges_controller.rb  home_controller.rb  leaderboards_controller.rb  profile_controller.rb  tasks_controller.rb  users_controller.rb
app/helpers/: devise_helper.rb  mail_from_helper.rb
app/javascript/packs/: application.js
app/javascript/stylesheets/: application.scss
app/jobs/: refresh_daily_tasks_job.rb  refresh_users_daily_tasks_job.rb  remind_users_to_login_job.rb  start_tasks_job.rb
app/mailers/: reminders_mailer.rb
app/models/: daily_task.rb  granted_badge.rb  task.rb  user.rb
app/views/badges/: index.html.erb
config/: application.rb  bce_options_template.json  cable.yml  credentials.yml.enc  database.yml  routes.rb  sidekiq.yml  wt_config.xml
config/environments/: development.rb  production.rb
config/initializers/: devise.rb  sidekiq.rb
db/: schema.rb
db/migrate/: 20200206181523_create_users.rb  20200206183107_add_devise_to_users.rb  20200207170110_add_last_action_to_user.rb  20200207175948_create_tasks.rb  20200208105210_create_granted_badges.rb  20200208202031_create_daily_tasks.rb  20200208215426_add_last_notified_to_user.rb
lib/tasks/: check_tasks.rake  modify_user.rake
src/: Application.cpp  Application.h  BCEToolMain.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  DailyTasks.h  Server.cpp  Server.h  Session.cpp  Session.h  SessionMapper.cpp  SessionMapper.h  Task.cpp  Task.h  User.cpp  User.h  main.cpp
test/fixtures/: daily_tasks.yml  tasks.yml  users.yml
test/jobs/: refresh_daily_tasks_job_test.rb  refresh_users_daily_tasks_job_test.rb  remind_users_to_login_job_test.rb
test/models/: granted_badge_test.rb
(+20 files in other folders)
